@@ -3,7 +3,7 @@ from setuptools import setup, find_packages
 
 setup(
     name="lovely.jsonrpc",
-    version="0.0.1a4",
+    version="0.0.1a5",
     packages=find_packages('src'),
     package_dir = {'':'src'},
     zip_safe = True,
